# Server

./: .gitignore  factor_lib.py  lib.txt  test.ipynb
Strategy/: README.md  config.py  main.ipynb  model_evaluation_notes.md  pipeline_train_score_backtest.ipynb  single_factor_open0935_study.ipynb  strategy_rules.md  tmp_quick_backtest_diagnostic.py
Strategy/backtest/: event_backtest.py  ic_analysis.py  quick_backtest.py  single_factor_research.py  universe.py
Strategy/data_io/: __init__.py  generate_volume.py  loader.py  saver.py
Strategy/factor/: __init__.py  custom_factors.py  daily_factor.py  daily_factor_library.py  daily_factors_raw.py  factor_base.py  min_factor.py  (+1 more)
code/: .clinerules  Lob_tickbytick_base0_lyt.py  Lob_tickbytick_base5_lyt.py  Lob_tickbytick_base6_lyt.py  daily_factors.py  meeting_notes_20260420.md  min_data_generate.ipynb  project_doc.md  初步指导.md
prog_trade_reg/: README.md  pyproject.toml  requirements.txt  论文数据构建与主回归进展.md
prog_trade_reg/docs/: 中期报告_程序化交易监管实证.tex
prog_trade_reg/prog_trade_reg/: __init__.py  __main__.py  cli.py  config.py  did_regress.py  feather_io.py  paths.py  raw_paths.py  trade_calendar.py
prog_trade_reg/prog_trade_reg/pipeline/: __init__.py  build_panel.py  exposure.py  lob_agg.py  order_trans_agg.py  outcome_batch.py  outcome_daily.py
rl_factor_mining/: config.py  requirements.txt  train_factor_rl.py
tests/: test_dtype_loading.py
torch_operators_user/: fea_to_mmap.ipynb  gp_api_sample.ipynb  gp_functions.py  merge_fac_result.ipynb  new_feature_1.ipynb  sample.ipynb  torch_operators_my.py
(+44 files in other folders)
