[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prog_trade_reg"
version = "0.1.0"
description = "Programmatic trading regulation thesis: HF compute -> daily/outcomes panel + exposure"
requires-python = ">=3.9"
dependencies = [
  "polars>=0.20.0",
  "pyarrow>=14.0.0",
  "pandas>=2.0.0",
  "tqdm>=4.66.0",
  "linearmodels>=5.3",
]

[project.scripts]
prog-trade-reg = "prog_trade_reg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
